--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/jpa_prac?serverTimezone=UTC
+serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=1234
 
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
