--- a/DockerfileNginx
+++ b/DockerfileNginx
@@ -2,7 +2,8 @@
 FROM nginx:1.25.4-alpine-slim
 
 # Nginx 설정 파일 복사
-COPY ../nginx.conf /etc/nginx/nginx.conf
+COPY nginx/conf/nginx.conf /etc/nginx/conf.d/default.conf
+COPY src/main/resources/index.html /usr/share/nginx/html
 
 # 포트 설정
 EXPOSE 80
