--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,8 +1,6 @@
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-
+// test? DB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/fortest?serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=9233
 spring.jpa.show-sql=true
