--- a/.github/workflows/develop-branch.yml
+++ b/.github/workflows/develop-branch.yml
@@ -4,11 +4,16 @@ on: # 워크플로우가 언제 실행되는지 정의 (like 조건문)
   push:
     branches:
       - SJ-67--build-CI-pipeline # 지정한 브랜치로 Push 했을 때
-    paths:
-      - 'src/**'
   pull_request:
     branches:
       - SJ-67--build-CI-pipeline # 테스트용 임시 브랜치
+
+env:
+  REGISTRY: docker.io
+  IMAGE_NAME: gonghak-was
+  AWS_S3_BUCKET_NAME: ${{ secrets.AWS_S3_BUCKET_NAME }} # S3 버킷 이름
+  AWS_CODE_DEPLOY_NAME: gonghak-codedeploy # CodeDeploy 애플리케이션 이름
+  AWS_CODE_DEPLOY_GROUP: production # CodeDeploy 배포 그룹 이름
 
 jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정의 (like 조건문의 본문)
   image-build-and-push:
@@ -27,3 +32,12 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }} # Github Secret에서 Docker hub 사용자 이름을 가져옴
           password: ${{ secrets.DOCKERHUB_TOKEN }} # Github Secret에서 Docker hub 액세스 토큰을 가져옴
+
+      - name: Build and Push
+        uses: docker/build-push-action@v5
+        with:
+          context: ./ # Dockerfile의 경로
+          file: ./Dockerfile # Dockerfile 이름
+          push: true # 이미지를 레지스트리에 푸쉬
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} # 커밋 아이디로 태그 지정
+          platform: linux/amd64,linux/arm64 # 빌드된 이미지가 여러 환경에서 호환될 수 있도록 아키텍처 명시
