--- a/.github/workflows/develop-branch.yml
+++ b/.github/workflows/develop-branch.yml
@@ -40,4 +40,4 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
           file: ./Dockerfile # Dockerfile 이름
           push: true # 이미지를 레지스트리에 푸쉬
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} # 커밋 아이디로 태그 지정
-          platform: linux/amd64,linux/arm64 # 빌드된 이미지가 여러 환경에서 호환될 수 있도록 아키텍처 명시
+          platforms: linux/amd64,linux/arm64 # 빌드된 이미지가 여러 환경에서 호환될 수 있도록 아키텍처 명시
