--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 src/main/resources/application.properties
+src/test/resources/application.properties
 
 ### NetBeans ###
 /nbproject/private/
