Feat(gitignore) : file 데이터를 넣는 클래스 제외

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ out/
 !**/src/test/**/out/
 src/main/resources/application.properties
 
+com/example/gimmegonghakauth/InitFileData.java
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
