--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ out/
 !**/src/test/**/out/
 src/main/resources/application.properties
 
-com/example/gimmegonghakauth/InitFileData.java
+.csv
 
 ### NetBeans ###
 /nbproject/private/
