--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,6 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
-    testImplementation "org.testcontainers:mysql:1.19.6"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     testImplementation 'org.springframework.security:spring-security-test'
 
@@ -58,6 +57,7 @@ dependencies {
     testImplementation "org.testcontainers:junit-jupiter:1.19.6"
     // Testcontainer MySQL 모듈 설치
     testImplementation "org.testcontainers:mysql:1.19.6"
+    testImplementation "org.testcontainers:testcontainers:1.19.1"
 }
 
 tasks.named('bootBuildImage') {
