--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -1,4 +1,4 @@
-name: Backend Build and Push (For main)
+name: Backend Build and Push
 
 on: # 워크플로우가 언제 실행되는지 정의 (like 조건문)
   push:
@@ -39,17 +39,18 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
           mysql database: 'jpa_prac'
           mysql root password: 1234
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
-        shell: bash
-
-      - name: Build With Gradle
-        run: ./gradlew clean bootJar
       - name: Create Properties For Test
         run: |
           touch ./src/test/resources/application.properties
           echo "${{ secrets.TEST_PROPERTIES }}" >> ./src/test/resources/application.properties
           cat ./src/test/resources/application.properties
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+        shell: bash
+
+      - name: Build With Gradle
+        run: ./gradlew clean build
 
       - name: Set up Docker Buildx # 멀티 플랫폼 빌드와 캐시 활용을 할 수 있는 도커 빌드X 설치
         uses: docker/setup-buildx-action@v3
