--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -50,7 +50,7 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
         shell: bash
 
       - name: Build With Gradle
-        run: ./gradlew clean build
+        run: ./gradlew clean bootJar
 
       - name: Set up Docker Buildx # 멀티 플랫폼 빌드와 캐시 활용을 할 수 있는 도커 빌드X 설치
         uses: docker/setup-buildx-action@v3
