feat: Nginx, WAS 도커파일 수정 및 entrypoint.sh 파일 작성

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,28 @@ version: '3'
 
 services:
   nginx:
-    build:
-      dockerfile: DockerfileNginx
-    image: gonghak-proxy:1.0.0
+    build: # 도커파일을 통해 이미지를 빌드할 때, 사용
+      context: ./docker
+      dockerfile: Dockerfile_Nginx
+    image: gonghak-proxy:local
     ports:
       - 80:80
     networks:
       - gonghak
-  springboot:
-    build: ./
-    image: gonghak-app:1.0.0
+  was:
+    build:
+      context: ./docker
+      dockerfile: Dockerfile_Was
+    image: boylonglegs/gonghak-was:local
     networks:
       - gonghak
+  db:
+    image: mysql:8.3.0
+    volumes:
+      - ./mysql/init:/docker-entrypoint-initdb.d
+    environment:
+          MYSQL_ROOT_PASSWORD: 1234
+          MYSQL_DATABASE: gonghak
 
 networks:
   gonghak:
