--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -10,7 +10,7 @@ server {
 
     # /api로 시작하는 요청을 스프링부트의 8080 포트로 요청 전달한다.
     location /api/ {
-        proxy_pass http://gimme-gonghak-auth-springboot-1:8080; # 도메인 이름은 스프링부트 컨테이너의 이름으로 지정
+        proxy_pass http://${WAS_HOST}:${WAS_PORT}; # 백엔드 컨테이너 이름 동적 바인딩
         proxy_set_header Host $host; # 요청에 사용된 호스트 이름
         proxy_set_header X-Real-IP $remote_addr; # 요청을 한 클라이언트의 주소를 바인딩
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; # 요청을 받은 프록시 서버의 주소를 나열
