--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-src/main/resources/application.properties
-src/test/resources/application.properties
+*.properties
 
 ### NetBeans ###
 /nbproject/private/
