--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,12 +5,16 @@ serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=1234
 
+#spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
+#spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #\uCFFC\uB9AC \uB85C\uADF8 \uC124\uC815
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+
 logging.level.org.hibernate.type=trace
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.hind=trace
