--- a/build.gradle
+++ b/build.gradle
@@ -52,12 +52,6 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
 
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
-
-    // Testcontainers Junit5 호환 버전 라이브러리 설치
-    testImplementation "org.testcontainers:junit-jupiter:1.19.6"
-    // Testcontainer MySQL 모듈 설치
-    testImplementation "org.testcontainers:mysql:1.19.6"
-    testImplementation "org.testcontainers:testcontainers:1.19.1"
 }
 
 tasks.named('bootBuildImage') {
@@ -69,6 +63,7 @@ tasks.named('test') {
 }
 
 bootJar {
-    dependsOn test
+    // main 브랜치에서만 추가하기
+    // dependsOn test
 }
 
