fix: CRLF -> LF로 변경
- 도커 컴포즈 실행 시 CRLF 형식으로 작성된 문서를 읽지 못하는 문제 해결

--- a/docker/Dockerfile_Nginx
+++ b/docker/Dockerfile_Nginx
@@ -16,6 +16,6 @@ COPY ./src/main/resources/index.html /usr/share/nginx/html
 
 # 포트 설정
 EXPOSE 80
-ENTRYPOINT ["/usr/local/bin/nginx-entrypoint.sh"]
+ENTRYPOINT ["nginx-entrypoint.sh"]
 CMD ["nginx", "-g", "daemon off;"]
 # 컨테이너에 전달되는 최종 명령어 "nginx-entrypoint.sh nginx -g daemon off"
