--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-*.properties
+application.properties
 
 ### NetBeans ###
 /nbproject/private/
