--- a/docker/Dockerfile_Nginx
+++ b/docker/Dockerfile_Nginx
@@ -14,8 +14,8 @@ RUN chmod +x /usr/local/bin/nginx-entrypoint.sh
 COPY ./nginx/conf/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Nginx 컨테이너에 정적 파일 복사
-COPY ./src/main/resources/index.html /usr/share/nginx/html
-COPY ./src/main/resources/static/ /usr/share/nginx/
+COPY ./src/main/resources/templates/index.html /usr/share/nginx/
+COPY ./src/main/resources/static/ /usr/share/nginx/static/
 
 # 포트 설정
 EXPOSE 80
