--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -5,13 +5,13 @@ server {
     # 정적 페이지는 새로운 location 블록을 생성하여 반환할 수 있다.
     location / {
         root /usr/share/nginx/;
-        # index index.html; # /usr/share/nginx/html 폴더에 있는 index.html을 자동으로 반환
+        index index.html; #/usr/share/nginx에 있는 main.html을 자동으로 반환
     }
 
     # 정적 페이지 반환하는 블럭 설정
-    # location /static/ {
-    #     root /usr/share/nginx/; # /usr/share/nginx/static 폴더에 css 및 js 파일을 저장한다.
-    # }
+    location /static/ {
+        root /usr/share/nginx/; # /usr/share/nginx/static 폴더에 css 및 js 파일을 저장한다.
+    }
 
     # /api로 시작하는 요청을 스프링부트의 8080 포트로 요청 전달한다.
     location /api/ {
