Refactor : SQL 파일 등록 오류로 인한 EventListener로 더미 데이터 삽입

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,11 +6,13 @@ spring.datasource.password=1234
 
 
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-#ddl -> data.sql \uCC98\uB9AC \uC808\uCC28
+#\uC2A4\uD0A4\uB9C8.sql -> data.sql insert \uCC98\uB9AC
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
 #spring.sql.init.data-locations=classpath:db/data.sql
+#spring.sql.init.schema-locations=classpath:db/schema.sql
 
 #\uCFFC\uB9AC \uB85C\uADF8 \uC124\uC815
 spring.jpa.properties.hibernate.show_sql=true
