--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/jpa_prac?serverTimezone=Asia/S
 spring.datasource.username=root
 spring.datasource.password=1234
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #ddl -> data.sql \uC801\uC6A9
