--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 #mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jpa_prac?serverTimezone=UTC
-serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/jpa_prac?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=1234
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+#ddl -> data.sql \uC801\uC6A9
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+#spring.sql.init.data-locations=classpath:data.sql
+
 
 #\uCFFC\uB9AC \uB85C\uADF8 \uC124\uC815
 #spring.jpa.properties.hibernate.show_sql=true
