--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,24 +1,16 @@
 #mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jpa_prac?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/jpa_prac?serverTimezone=UTC
+serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=1234
 
-
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-#\uC2A4\uD0A4\uB9C8.sql -> data.sql insert \uCC98\uB9AC
-#spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.mode=always
-#spring.sql.init.data-locations=classpath:db/data.sql
-#spring.sql.init.schema-locations=classpath:db/schema.sql
-
 #\uCFFC\uB9AC \uB85C\uADF8 \uC124\uC815
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
-
 logging.level.org.hibernate.type=trace
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.hind=trace
