--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,13 @@ version: "3.8"
 services:
   db:
     container_name: db
-    image: mysql:latest
+    image: mysql:8.4.0
     volumes:
       - ./mysql/init:/docker-entrypoint-initdb.d
     environment:
       - MYSQL_ROOT_PASSWORD=1234
       - MYSQL_DATABASE=gonghak
+      - LANG=C.UTF-8
     restart: always
     networks:
       - gonghak
