--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-application.properties
 
 ### NetBeans ###
 /nbproject/private/
@@ -69,7 +68,6 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-src/main/resources/application.properties
 
 *.csv
 *.sql
@@ -84,3 +82,7 @@ src/main/resources/application.properties
 
 ### VS Code ###
 .vscode/
+
+### Ignore Files for Deploy ###
+application.properties
+scripts
