refactor: 스프링부트 멀티 스테이지 빌드 수정
- 빌드에 사용되는 베이스 이미지를 gradle로 변경

--- a/docker/Dockerfile_Was
+++ b/docker/Dockerfile_Was
@@ -1,6 +1,4 @@
-# 소스 빌드용 Base 이미지(Maven, Gradle에 호환되는 JDK 이미지)
-FROM amazoncorretto:17-alpine3.19 as build
-
+FROM gradle:8.8.0-jdk17-alpine as build
 WORKDIR /app
 
 # 의존성을 가져오기 위해 필요한 파일만 우선 복사
