fix: application.properties 파일 생성 명령어 수정
- touch 명령어는 특정 폴더가 없는 상태에서 실행하면 에러가 발생함

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
 
       - name: Test용 Properties 파일 추가
         run: |
-          touch ./src/test/resources/application.properties
+          mkdir -p ./src/test/resources
           echo "${{ secrets.TEST_PROPERTIES }}" >> ./src/test/resources/application.properties
 
       - name: gradlew 권한 부여
