chore: .gitignore 내용 추가
- .env 파일
- application으로 시작하는 properties 파일 전부

--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,12 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-src/main/resources/application.properties
+
+application*.properties
 
 *.csv
 *.sql
+*.env
 
 ### NetBeans ###
 /nbproject/private/
