fix: 빌드 산출물 다운로드 경로 지정
- test_and_job에서 빌드한 jar 파일을 deploy 서버의 ./build/libs에 복사

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,7 +95,7 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
         uses: actions/download-artifact@v4
         with:
           name: build-artifact
-          path: ./build
+          path: /build/libs/app.jar
 
       - name: 이미지 빌드 후, ECR에 푸쉬
         run: |
