fix: build/lib 폴더 생성 명령어 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,6 +91,10 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
       - name: AWS ECR에 로그인
         uses: aws-actions/amazon-ecr-login@v2
 
+      - name: build/libs 폴더 생성
+        run: |
+          mkdir /build/libs
+
       - name: test_and_build 작업에서 업로드한 빌드 산출물 다운로드
         uses: actions/download-artifact@v4
         with:
