--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,7 +93,7 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
 
       - name: build/libs 폴더 생성
         run: |
-          mkdir /build/libs
+          mkdir ./build/libs
 
       - name: test_and_build 작업에서 업로드한 빌드 산출물 다운로드
         uses: actions/download-artifact@v4
