--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,6 @@ env:
   AWS_CODE_DEPLOY_NAME: gonghak98-server # CodeDeploy 애플리케이션 이름
   AWS_CODE_DEPLOY_GROUP: Production # CodeDeploy 배포 그룹 이름
 
-  ECR_REGISTRY: ${{ secrets.ECR_REPOSITORY_ORIGIN }} # login-ecr 스텝의 출력 값(ECR 저장소 이름)
-  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
-  IMAGE_TAG: latest
-
 jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정의 (like 조건문의 본문)
   test_and_build:
     name: 스프링부트 프로젝트 테스트 자동화
@@ -89,6 +85,7 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
         uses: docker/setup-buildx-action@v3
 
       - name: AWS ECR에 로그인
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: build/libs 폴더 생성
@@ -102,23 +99,27 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
           path: ./build/libs/app.jar
 
       - name: 이미지 빌드 후, ECR에 푸쉬
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+          IMAGE_TAG: ${{ github.sha }}
         run: |
           docker buildx build --platform=linux/amd64 \
             -f ./docker/Dockerfile_Was_ECR \
-            -t ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY}}:${{ env.IMAGE_TAG }} \
+            -t $REGISTRY/$REPOSITORY:$IMAGE_TAG \
             --push .
 
       - name: 배포 스크립트 폴더 및 파일 추가
         run: |
-          mkdir scripts
+          mkdir -p scripts
           echo "${{ secrets.START_SERVER_SH }}" >> ./scripts/start-server.sh
 
       - name: 배포에 필요한 파일 압축하기
-        run: tar -czvf ${{ GITHUB.SHA }}.tar.gz appspec.yml scripts
+        run: tar -czvf ${{ github.sha }}.tar.gz appspec.yml scripts
 
       - name: S3로 배포 압축파일 업로드
         run: |
-          aws s3 cp ./${{ GITHUB.SHA }}.tar.gz s3://${{ env.AWS_S3_BUCKET_NAME }}/${{ GITHUB.SHA }}.tar.gz
+          aws s3 cp ./${{ github.sha }}.tar.gz s3://${{ env.AWS_S3_BUCKET_NAME }}/${{ github.sha }}.tar.gz
 
       - name: CodeDeploy를 활용해 EC2에 프로젝트 코드 배포
         run: |
