--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,7 +102,7 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: latest
         run: |
           docker buildx build --platform=linux/amd64 \
             -f ./docker/Dockerfile_Was_ECR \
