--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ src/main/resources/application.properties
 
 ### VS Code ###
 .vscode/
+src/main/resources/application.properties
+src/test/resources/application.properties
