fix: Github Actions 빌드 산출물 다운로드 경로 수정
- 다운로드 파일이 저장되는 폴더를 지정해야 하는데 이름까지 같이 지정했음

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -97,7 +97,7 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
         uses: actions/download-artifact@v4
         with:
           name: build-artifact
-          path: ./build/libs/app.jar
+          path: ./build/libs/
 
       - name: 빌드 산출물 확인
         run: |
