SJ-99 Github Actions yml 파일 수정
- 변경 전 : Main 브랜치로 PR 생성됐을 때, 실행
- 변경 후 : Main 브랜치로 PR이 Merge 됐을 때, 실행

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 name: gonghak98 WAS CI/CD
 
 on: # 워크플로우가 언제 실행되는지 정의 (like 조건문)
-  pull_request:
+  push:
     branches:
-      - main # main 브랜치로 PR 후 Merge 됐을 때
+      - main # main 브랜치로 PR 후 Merge 됐을 때 (Merge되면 Merge 커밋이 push 되므로 해당 조건을 만족)
 
 env:
   AWS_REGION_NAME: ap-northeast-2 # AWS 리전 이름
