--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,10 +43,10 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
 #          mkdir -p ./src/test/resources
 #          echo "${{ secrets.TEST_PROPERTIES }}" >> ./src/test/resources/application.properties
 
-      - name: Main용 Properties 파일 추가
+      - name: 배포용 Properties 파일 추가
         run: |
           mkdir -p ./src/main/resources
-          echo "${{ secrets.MAIN_PROPERTIES }}" >> ./src/main/resources/application.properties
+          echo "${{ secrets.PROD_PROPERTIES }}" >> ./src/main/resources/application-prod.properties
 
       - name: gradlew 권한 부여
         run: chmod +x ./gradlew
