--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
     steps:
       - name: 깃허브 리포지토리 파일 불러오기
         uses: actions/checkout@v4
+        with:
+          submodules: true
+          token: ${{ secrets.GITUB_TOKEN }}
 
       - name: 러너에 JDK 설치
         uses: actions/setup-java@v4
@@ -43,11 +46,11 @@ jobs: # 해당 워크플로우에서 어떤 일이 수행되어야 하는지 정
 #          mkdir -p ./src/test/resources
 #          echo "${{ secrets.TEST_PROPERTIES }}" >> ./src/test/resources/application.properties
 
-      - name: 배포용 Properties 파일 추가
-        run: |
-          mkdir -p ./src/main/resources
-          echo "${{ secrets.MAIN_PROPERTIES }}" >> ./src/main/resources/application.properties
-          echo "${{ secrets.PROD_PROPERTIES }}" >> ./src/main/resources/application-prod.properties
+#      - name: 배포용 Properties 파일 추가
+#        run: |
+#          mkdir -p ./src/main/resources
+#          echo "${{ secrets.MAIN_PROPERTIES }}" >> ./src/main/resources/application.properties
+#          echo "${{ secrets.PROD_PROPERTIES }}" >> ./src/main/resources/application-prod.properties
 
       - name: gradlew 권한 부여
         run: chmod +x ./gradlew
